--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,22 @@ body {
     text-wrap: balance;
   }
 } */
+
+.state-effect {
+  @apply hover:scale-105 focus:scale-105 active:scale-[1.02] transition;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #0f1015;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  /* background-color: white; */
+}
